# CMake_Tutorial_VDT2025

./: README.md
module2_generate_executable/: CMakeLists.txt  division.cpp
module2_generate_library/: CMakeLists.txt  addition.cpp  print_result.h
module3_better_code/my_math/src/: division.cpp
module3_better_code/my_print/src/: print_result.cpp
module3_manage_header_files/: main.cpp
module3_manage_header_files/my_math/: CMakeLists.txt
module3_manage_header_files/my_math/src/: addition.cpp  division.cpp
module3_manage_header_files/my_print/src/: print_result.cpp
module3_sub_directory/: CMakeLists.txt
module3_sub_directory/my_math/: CMakeLists.txt
module3_sub_directory/my_print/: CMakeLists.txt  print_result.cpp
module4_exporting_package/: main.cpp
module4_exporting_package/my_math/: CMakeLists.txt
module4_exporting_package/my_math/include/my_math/: addition.h
module4_exporting_package/my_math/src/: addition.cpp
module4_installing_process/my_math/: CMakeLists.txt
module4_installing_process/my_math/include/my_math/: division.h
module4_installing_process/my_print/: CMakeLists.txt
module4_using_3rd_package/: CMakeLists.txt
